[package]
name = "domo"
version = "0.2.0"
authors = ["Sean Murphy <sean.murphy@domo.com>"]
edition = "2018"
description = "The Domo Rust SDK wrapping our APIs. Also includes a CLI application."
documentation = "https://docs.rs/domo"
readme = "README.md"
homepage = "https://github.com/domoinc/domo-rust-sdk"
repository = "https://github.com/domoinc/domo-rust-sdk"
license-file = "LICENSE"
keywords = ["cli", "api", "sdk"]
categories = ["api-bindings", "command-line-interface", "command-line-utility"]
default-run = "domo"

[dependencies]

chrono = {version="0.4.10", features=["serde"]}
serde = {version="1.0.104", features=["derive"]}
serde_json = "1.0.48"
serde_yaml = "0.8.11"

structopt = "0.3.9"
csv="1.1.3"
surf = "1.0.3"
async-std = {version = "1.6.3", features=["attributes"]}
base64 = "0.12.3"
