[package]
name = "domo"
version = "0.3.2"
authors = ["Sean Murphy <sean.murphy@domo.com>"]
edition = "2018"
description = "The Domo Rust SDK wrapping our APIs. Also includes a CLI application."
documentation = "https://docs.rs/domo"
readme = "README.md"
homepage = "https://github.com/domoinc/domo-rust-sdk"
repository = "https://github.com/domoinc/domo-rust-sdk"
license-file = "LICENSE"
keywords = ["cli", "api", "sdk"]
categories = ["api-bindings", "command-line-interface", "command-line-utilities"]
default-run = "domo"

[dependencies]

chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"

structopt = "0.3.21"
csv= "1.1.6"
surf = "2.2.0"
async-std = { version = "1.9.0", features = ["attributes"] }
base64 = "0.13.0"
